--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/pazuti/.netbeans/7.3.1/build.properties
+user.properties.file=C:\\Users\\Cliente\\.netbeans\\7.1.2\\build.properties
